Moved alot of the css over to sass to work both in the new system of adding all non-application css to render a page via 1 file while getting the benefit of that css being compressed. thanks sass

--- a/app/views/contact/new.haml
+++ b/app/views/contact/new.haml
@@ -1,5 +1,5 @@
 :ruby
-  # extra_css('contact')
+  extra_css('contact')
 
 = render "shared/breadcrumb", :crumbs => [[:home, root_path], [:contact_us, nil]]
 
