--- a/app/views/shared/_user_notice.haml
+++ b/app/views/shared/_user_notice.haml
@@ -12,7 +12,7 @@
   timeout = timeout.nil? ? false : timeout
 
   extra_js('jquery.growl')
-  extra_css('jquery.growl')
+  # extra_css('jquery.growl')
 
 - unless msg.empty?
   :javascript
