--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,235 +1,1 @@
-p {
-    font-size : .85em;
-    line-height : 1.05em;
-    color : #888;
-    margin-bottom : 5px;
-}
-
-.sprite { background : url(/images/sprites/home.png) no-repeat scroll 0px 500px transparent; }
-
-#what_we_do_video_preview  {
-    background-position : 0px -2px;
-    height : 106px;
-    width : 119px;
-    margin-top : 4px;
-}
-#seller_resources_icon {
-    background-position : -119px -2px;
-    height : 85px;
-    width : 88px;
-    margin : 24px 0 0 -7px;
-}
-#our_home_buyers_icons {
-    background-position : -214px -2px;
-    height : 83px;
-    width : 87px;
-    margin : 13px 0 0 -9px;
-}
-#get_cash_offer {
-    background-position : -300px -2px;
-    height : 77px;
-    width : 288px;
-    margin : 1px 0 11px -2px;
-}
-#lock_icon {
-    background-position : 0px -110px;
-    height : 22px;
-    width  : 15px;
-    vertical-align : sub;
-}
-#stars {
-    background-position : -589px -28px;
-    height : 14px;
-    width : 64px;
-}
-#truste {
-    background-position : -350px -80px;
-    height : 28px;
-    width : 101px;
-    margin : -2px 0 0 20px;
-}
-#verisign {
-    background-position : -456px -81px;
-    height : 26px;
-    width : 61px;
-    margin : -2px 0 0 13px;
-}
-#mcafee {
-    background-position : -523px -84px;
-    height : 22px;
-    width : 62px;
-    margin : 1px 0 0 12px;
-}
-#get_cash_offer_btn {
-    background-position : -121px -89px;
-    border : none !important;
-    width  : 222px !important;
-    height : 48px;
-}
-#welcome_title {
-    background-position : 0px -164px;
-    height : 17px;
-    width  : 256px;
-}
-#what_we_do_title {
-    background-position : -509px -113px;
-    height : 15px;
-    width  : 117px;
-}
-#our_home_buyers_title {
-    background-position : -258px -164px;
-    height : 21px;
-    width  : 157px;
-    margin-top : 2px;
-}
-#seller_resources_title {
-    background-position : -345px -111px;
-    height : 17px;
-    width  : 160px;
-}
-#other_others_quote {
-    background-position : 0px -138px;
-    height : 24px;
-    width : 329px;
-}
-#top_pick_quote {
-    background-position : -330px -138px;
-    height : 24px;
-    width : 341px;
-}
-
-/* end sprites */
-
-
-#homeC {
-    margin-top : 16px;
-}
-#homeC #welcome_messageC {
-    width  : 541px;
-    height : 437px;
-    position : relative;
-}
-#welcome_messageC #satisfied_sellers {
-    background : url(/images/sprites/satisfied_sellers.png) no-repeat scroll -9px 0px transparent;
-    height : 437px;
-    width : 541px;
-    position : absolute;
-    top : 0;
-    left : 0;
-    z-index : 7;
-}
-#welcome_messageC div#welcome_message_opacity {
-    height : 122px;
-    width : 100%;
-    opacity : .9;
-    background-color : white;
-    position : absolute;
-    top : 315px;
-    z-index : 8;
-}
-#welcome_messageC div#welcome_message {
-    position : absolute;
-    top : 343px;
-    left : 55px;
-    z-index : 9;
-}
-/*div#welcome_message h1 {*/
-h1 {
-    line-height : 1em;
-    font-size : 1.5em;
-    font-weight : bold;
-    color : #f89a36;
-    letter-spacing : -.3px;
-}
-div#welcome_message p {
-    color : #555555;
-    font-size : .8em;
-    line-height : 1.4em;
-    margin-top : .3em;
-}
-#homeC #cash_offer_formC {
-    margin-left : 13px;
-}
-form#new_seller_listing .field {
-    margin-bottom : 10px;
-    width : 320px;
-}
-form#new_seller_listing label {
-/*    display : inline-block;*/
-/*    width : 100px;*/
-    display : none;
-}
-form#new_seller_listing input {
-    width : 320px;
-}
-
-div#email, div#number, div#address1, div#address_zip { clear : both; }
-form#new_seller_listing div#first_name.field,
-form#new_seller_listing input#seller_listing_user_first_name,
-form#new_seller_listing div#last_name.field,
-form#new_seller_listing input#seller_listing_user_last_name,
-form#new_seller_listing div#address_zip.field,
-form#new_seller_listing input#seller_listing_address_zip {
-    width : 150px;
-}
-form#new_seller_listing div#first_name.field {
-    float : left;
-    margin-right : 20px;
-}
-form#new_seller_listing div#last_name.field {
-    float : left;
-}
-.submitC {
-    padding-top : 12px;
-}
-.submitC #securityC {
-    display : inline-block;
-    font-size : .9em;
-    color : #666;
-    position : relative;
-    top : -22px;
-    left : 5px;
-}
-#security_iconsC {
-    margin-top : 16px;
-}
-#security_iconsC > img {
-    float : left;
-}
-
-
-/* Resources Row */
-#resources_rowC {
-    margin : 0 0 20px 21px;
-    padding-top : 10px;
-    color : #555555;
-}
-#sv_contentC,
-#tu_contentC,
-#rs_contentC {
-    float : right;
-    margin-right : 20px;
-}
-#sv_contentC { width : 173px; margin-right : 30px; }
-#tu_contentC { width : 172px; margin-right : 28px; }
-#rs_contentC { width : 178px; margin-right : 0px;}
-
-#resources_rowC h1 {
-    color : #81a048;
-    margin-bottom : 3px;
-}
-
-.bottom_contentC a {
-    color : #7fb86b;
-}
-
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+.sprite{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px 500px transparent}#lock_icon{background-position:-359px -56px;height:25px;width:85px;vertical-align:text-top;margin-left:5px}#truste{background-position:0px -125px;height:28px;width:101px;margin:0 0 0 20px}#mcafee{background-position:-360px -32px;height:22px;width:62px;margin:0 0 0 4px}form input[type="image"]{background-position:0px -81px;height:40px;width:119px}.seller_signup_boxC{margin-bottom:50px}.seller_signup_boxC div.gutter{padding:15px 22px 5px}.seller_signup_boxC p,.seller_signup_boxC strong{font-size:.75em;line-height:16px;margin-bottom:8px;margin-right:-25px}.seller_signup_boxC strong{display:block;font-weight:bold;margin-bottom:4px}form .field,form input[type="text"]{width:208px}form label{display:none}form div#email.field,form input#seller_listing_user_email,form div#number.field,form input#seller_listing_phone_number_number,form div#address1.field,form input#seller_listing_address_address1,form div#address_zip.field,form input#seller_listing_address_zip{width:157px}#securityC span{display:none}#security_iconsC{float:left;margin-top:17px}.submitC{padding-top:12px}.submitC #securityC{display:inline-block;font-size:.9em;color:#666;position:relative;top:-22px;left:5px}p{font-size:.85em;line-height:1.05em;color:#888;margin-bottom:5px}.sprite{background:url(/images/sprites/home.png) no-repeat scroll 0px 500px transparent}#what_we_do_video_preview{background-position:0px -2px;height:106px;width:119px;margin-top:4px}#seller_resources_icon{background-position:-119px -2px;height:85px;width:88px;margin:24px 0 0 -7px}#our_home_buyers_icons{background-position:-214px -2px;height:83px;width:87px;margin:13px 0 0 -9px}#get_cash_offer{background-position:-300px -2px;height:77px;width:288px;margin:1px 0 11px -2px}#lock_icon{background-position:0px -110px;height:22px;width:15px;vertical-align:sub}#stars{background-position:-589px -28px;height:14px;width:64px}#truste{background-position:-350px -80px;height:28px;width:101px;margin:-2px 0 0 20px}#verisign{background-position:-456px -81px;height:26px;width:61px;margin:-2px 0 0 13px}#mcafee{background-position:-523px -84px;height:22px;width:62px;margin:1px 0 0 12px}#get_cash_offer_btn{background-position:-121px -89px;border:none !important;width:222px !important;height:48px}#welcome_title{background-position:0px -164px;height:17px;width:256px}#what_we_do_title{background-position:-509px -113px;height:15px;width:117px}#our_home_buyers_title{background-position:-258px -164px;height:21px;width:157px;margin-top:2px}#seller_resources_title{background-position:-345px -111px;height:17px;width:160px}#other_others_quote{background-position:0px -138px;height:24px;width:329px}#top_pick_quote{background-position:-330px -138px;height:24px;width:341px}#homeC{margin-top:16px}#homeC #welcome_messageC{width:541px;height:437px;position:relative}#welcome_messageC #satisfied_sellers{background:url(/images/sprites/satisfied_sellers.png) no-repeat scroll -9px 0px transparent;height:437px;width:541px;position:absolute;top:0;left:0;z-index:7}#welcome_messageC div#welcome_message_opacity{height:122px;width:100%;opacity:.9;background-color:white;position:absolute;top:315px;z-index:8}#welcome_messageC div#welcome_message{position:absolute;top:343px;left:55px;z-index:9}h1{line-height:1em;font-size:1.5em;font-weight:bold;color:#f89a36;letter-spacing:-0.3px}div#welcome_message p{color:#555555;font-size:.8em;line-height:1.4em;margin-top:.3em}#homeC #cash_offer_formC{margin-left:13px}form#new_seller_listing .field{margin-bottom:10px;width:320px}form#new_seller_listing label{display:none}form#new_seller_listing input{width:320px}div#email,div#number,div#address1,div#address_zip{clear:both}form#new_seller_listing div#first_name.field,form#new_seller_listing input#seller_listing_user_first_name,form#new_seller_listing div#last_name.field,form#new_seller_listing input#seller_listing_user_last_name,form#new_seller_listing div#address_zip.field,form#new_seller_listing input#seller_listing_address_zip{width:150px}form#new_seller_listing div#first_name.field{float:left;margin-right:20px}form#new_seller_listing div#last_name.field{float:left}.submitC{padding-top:12px}.submitC #securityC{display:inline-block;font-size:.9em;color:#666;position:relative;top:-22px;left:5px}#security_iconsC{margin-top:16px}#security_iconsC > img{float:left}#resources_rowC{margin:0 0 20px 21px;padding-top:10px;color:#555555}#sv_contentC,#tu_contentC,#rs_contentC{float:right;margin-right:20px}#sv_contentC{width:173px;margin-right:30px}#tu_contentC{width:172px;margin-right:28px}#rs_contentC{width:178px;margin-right:0px}#resources_rowC h1{color:#81a048;margin-bottom:3px}.bottom_contentC a{color:#7fb86b}
