--- a/public/stylesheets/jquery.growl.css
+++ b/public/stylesheets/jquery.growl.css
@@ -1,74 +1,1 @@
-#growlcontainer{
-  position: fixed;
-  right: 20px;
-  top: 20px;
-  z-index: 1000;
-  font-size: 1.1em;
-  width: 300px;
-}
-#growlcontainer ol li { list-style : decimal inside none; }
-
-.growlstatus{
-  position: relative;
-  background : url(/images/opacity_60.png) repeat scroll 0px 0px transparent;
-  border: 3px #000 solid;
-  padding: 15px;
-  color: #fff;
-  margin-bottom: 5px;
-  border-radius : 10px;
-  -moz-border-radius:10px;
-  -webkit-border-radius:10px;
-}
-.growlstatus .growltitle{
-  font-weight: bold;
-  margin-bottom: 5px;
-}
-.growlstatusclose{
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  width:30px;
-  height:30px;
-  cursor: pointer;
-  display: none;
-  background: transparent url(/images/growl_close_btn.png) no-repeat;
-}
-.growlstatus:hover{
-  background-color: #000;
-  border: 3px #666 solid;
-}
-.growlstatus:hover .growlstatusclose{
-  display: block;
-}
-.growlwithicon{
-  padding-left: 50px;
-/*  background-position: 5px 10px;*/
-/*  background-repeat:no-repeat;*/
-}
-
-#growlcontainer h2 {
-    color : #fff;
-    border-bottom : 1px dotted #fff;
-    margin-bottom : 5px;
-    padding-bottom : 5px;
-}
-#growlcontainer li {
-    font-size : .9em;
-    margin-bottom : 5px;
-}
-
-/****** growl icons ******* 
---------------------------*/
-#growlicon {
-    height : 32px;
-    width  : 32px;
-    position : absolute;
-    top : 6px;
-    left : 9px;
-}
-#growlicon.growlicon_notice {
-  background-image: url(/images/icons/notice.png);
-}
-.growlicon_error {
-  background-image: url(/images/icons/error.png);
-}
+#growlcontainer{position:fixed;right:20px;top:20px;z-index:1000;font-size:1.1em;width:300px}#growlcontainer ol li{list-style:decimal inside none}.growlstatus{position:relative;background:url(/images/opacity_60.png) repeat scroll 0px 0px transparent;border:3px #000 solid;padding:15px;color:#fff;margin-bottom:5px;border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px}.growlstatus .growltitle{font-weight:bold;margin-bottom:5px}.growlstatusclose{position:absolute;top:5px;right:5px;width:30px;height:30px;cursor:pointer;display:none;background:transparent url(/images/growl_close_btn.png) no-repeat}.growlstatus:hover{background-color:#000;border:3px #666 solid}.growlstatus:hover .growlstatusclose{display:block}.growlwithicon{padding-left:50px}#growlcontainer h2{color:#fff;border-bottom:1px dotted #fff;margin-bottom:5px;padding-bottom:5px}#growlcontainer li{font-size:.9em;margin-bottom:5px}#growlicon{height:32px;width:32px;position:absolute;top:6px;left:9px}#growlicon.growlicon_notice{background-image:url(/images/icons/notice.png)}.growlicon_error{background-image:url(/images/icons/error.png)}
