--- a/public/stylesheets/comp_data.css
+++ b/public/stylesheets/comp_data.css
@@ -1,114 +1,1 @@
-/* Start Sprites */
-.sprite { background : url(/images/sprites/seller-register-step2.png) no-repeat scroll 0px 500px transparent; }
-#step_two_comps {
-    background-position : 0px 0px;
-    height : 75px;
-    width  : 592px;
-}
-input[type="image"] {
-    background-position : -595px 0px;
-    height : 47px;
-    width  : 223px;
-    margin : 16px 0 0 0px;
-}
-
-/* sprites needed from step 1 sprite */
-#lock_icon  {
-    background : url(/images/sprites/seller-register-step1.png) no-repeat scroll -359px -56px transparent;
-    height : 25px;
-    width  : 85px;
-    vertical-align : middle;
-    margin-left : 7px;
-}
-#truste {
-    background : url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px -125px transparent;
-    height : 28px;
-    width : 101px;
-    margin : 0 0 0 20px;
-}
-#verisign {
-    background : url(/images/sprites/seller-register-step1.png) no-repeat scroll -103px -125px transparent;
-    height : 26px;
-    width : 61px;
-    margin : 0 0 0 7px;
-}
-#mcafee {
-    background : url(/images/sprites/seller-register-step1.png) no-repeat scroll -360px -32px transparent;
-    height : 22px;
-    width : 62px;
-    margin : 0 0 0 4px;
-}
-
-/* END Sprites */
-
-#mainC img#top {
-    height : 96px;
-    background : url(/images/page_banners/seller-listing-register-step1.png) no-repeat scroll 0px 0px transparent;
-}
-#mainC div#content { padding : 0px; }
-
-#step_two_contentC {
-    padding : 27px 33px;
-}
-div#form_gutter {
-    padding : 25px 0 0 29px;
-}
-textarea,
-input[type="text"] {
-    width : 350px;
-}
-textarea { height : 3em; }
-.field {
-    font-size : .95em;
-    color : #7a7a7a;
-}
-.field .left_col  { text-align : right; vertical-align : middle; }
-.field .right_col { padding-left : 20px; }
-
-.radioC span {
-    width : 40px;
-    display : inline-block;
-    text-align :center;
-}
-.radioC span, .field div.note {
-    font-size : .75em;
-}
-
-/* submit icons stolen from step 1 */
-#securityC span { display : none; }
-#security_iconsC {
-    margin-top : 8px;
-}
-.submitC {
-    padding-top : 12px;
-    margin-left : 58px;
-}
-.submitC #securityC {
-    display : inline-block;
-    font-size : .9em;
-    color : #666;
-    position : relative;
-    top : -22px;
-    left : 5px;
-}
-
-
-/* shared quotes partial */
-div#step_one_contentC #quotes_rowC { margin : 0 0 0 15px; }
-#quotes_rowC p {
-    font-size : .85em;
-    line-height : 1.05em;
-    color : #888;
-    margin-bottom : 5px;
-}
-
-#other_others_quote {
-    background : url(/images/sprites/home.png) no-repeat scroll 0px -138px transparent;
-    height : 24px;
-    width : 329px;
-}
-#top_pick_quote {
-    background : url(/images/sprites/home.png) no-repeat scroll -330px -138px transparent;
-    height : 24px;
-    width : 341px;
-}
+input.valid,textarea.valid{background-color:#daefc0;border-color:#588238;position:relative;color:#588238 !important}input.invalid,textarea.invalid{background-color:#f6b5b1;border-color:#bc2b25;position:relative;color:#a00 !important}div.form_validation_icon{background:url(/images/sprites/application.png) repeat-x scroll -513px -305px transparent;position:absolute;right:-17px;top:20%;height:15px;width:15px;z-index:9}div.form_validation_icon.valid{background-position:-376px -323px}div.form_validation_icon.invalid{background-position:-359px -323px}.ketchup-error-container{display:none}.sprite{background:url(/images/sprites/seller-register-step2.png) no-repeat scroll 0px 500px transparent}#step_two_comps{background-position:0px 0px;height:75px;width:592px}input[type="image"]{background-position:-595px 0px;height:47px;width:223px;margin:16px 0 0 0px}#lock_icon{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll -359px -56px transparent;height:25px;width:85px;vertical-align:middle;margin-left:7px}#truste{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll 0px -125px transparent;height:28px;width:101px;margin:0 0 0 20px}#verisign{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll -103px -125px transparent;height:26px;width:61px;margin:0 0 0 7px}#mcafee{background:url(/images/sprites/seller-register-step1.png) no-repeat scroll -360px -32px transparent;height:22px;width:62px;margin:0 0 0 4px}#mainC img#top{height:96px;background:url(/images/page_banners/seller-listing-register-step1.png) no-repeat scroll 0px 0px transparent}#mainC div#content{padding:0px}#step_two_contentC{padding:27px 33px}div#form_gutter{padding:25px 0 0 29px}textarea,input[type="text"]{width:350px}textarea{height:3em}.field{font-size:.95em;color:#7a7a7a}.field .left_col{text-align:right;vertical-align:middle}.field .right_col{padding-left:20px}.radioC span{width:40px;display:inline-block;text-align:center}.radioC span,.field div.note{font-size:.75em}#securityC span{display:none}#security_iconsC{margin-top:8px}.submitC{padding-top:12px;margin-left:58px}.submitC #securityC{display:inline-block;font-size:.9em;color:#666;position:relative;top:-22px;left:5px}div#step_one_contentC #quotes_rowC{margin:0 0 0 15px}#quotes_rowC p{font-size:.85em;line-height:1.05em;color:#888;margin-bottom:5px}#other_others_quote{background:url(/images/sprites/home.png) no-repeat scroll 0px -138px transparent;height:24px;width:329px}#top_pick_quote{background:url(/images/sprites/home.png) no-repeat scroll -330px -138px transparent;height:24px;width:341px}
