--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,13 +1,30 @@
+:ruby
+  # younker [2010-11-18 19:01]
+  # I would have done this in application_controller.initialize but the request object is not available
+  # in the initialize method, and since this is the only othe place I can reliably say is called for every request,
+  # this is where it goes. Besides, despite the database call here (in the view layer, YUCK!), it is view specific
+  # so there is *some* justification for it being here.
+  if @meta_data = Admin::MetaData.find_by_relative_path(request.path_info)
+    title = @meta_data.title
+    descr = @meta_data.description
+    keywords = @meta_data.keywords
+  end
+
+  title    ||= content_for?(:header_title) ? yield(:header_title) : 'eHouseOffers | Welcome!'
+  descr    ||= yield(:description) if content_for?(:description)
+  keywords ||= yield(:keywords) if content_for?(:keywords)
+
+
 :plain
   <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 %html
   %head>
-    %title= content_for?(:header_title) ? yield(:header_title) : "Ehouseoffers | Welcome!"
+    %title= title
 
     %link{:rel => 'icon', :type => 'image/png', :href => '/images/favicon.png'}
     %meta{:content => "text/html;charset=UTF-8", "http-equiv" => "content-type"}/
-    %meta{'name' => 'keywords',    :content => yield(:keywords) }/
-    %meta{'name' => 'description', :content => yield(:description) }/
+    %meta{'name' => 'keywords', :content => keywords}/
+    %meta{'name' => 'description', :content => descr}/
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}/
 
     %link{:rel => :stylesheet, :type => "text/css", :href => "/stylesheets/yui3-min.css"}
@@ -16,12 +33,23 @@
     = yield(:extra_css) if content_for?(:extra_css)
     = javascript_include_tag :defaults
     = yield(:extra_js) if content_for?(:extra_js)
+
     = csrf_meta_tag
 
     :javascript
       var AUTH_TOKEN = encodeURIComponent(#{form_authenticity_token.inspect});
 
 %body{:class => @frame || 'full'}
+  %div{:style => 'position:absolute;top:2px;right:2px;font-size:.85em'}
+    = admin_area do
+      - if @meta_data
+        = link_to "Edit meta data for this page", edit_admin_meta_datum_path(@meta_data)
+      - else
+        = link_to 'Add meta data for this page', new_admin_meta_datum_path(:p => request.path_info)
+
+
+
+
   %div#headerC
     = render :partial => 'layouts/application/header'
 
@@ -31,6 +59,7 @@
   %div#mainC
     %div#tab_arrow &nbsp;
     = image_tag '/images/transparent.gif', :id => 'top', :class => 'app_sprite', :alt => yield(:banner_title)
+
     %div#content
       - if content_for?(:page_title)
         = yield(:page_title)
