Changed around the anchors (we are actually using element ids) for the tos so when clicked, it shows the title, intro and list. previously it just showed the list

--- a/app/views/shared/_tos.haml
+++ b/app/views/shared/_tos.haml
@@ -1,6 +1,6 @@
-%span#tosC
+%span#tos
   %div{:style => 'float:right'}
-    = link_to 'View Terms of Service', '', :id => 'tos_view_trigger'
+    = link_to 'View Terms of Service', '#tos', :id => 'tos_view_trigger'
 
   %h1.green
     Privacy Terms & Conditions
@@ -9,7 +9,7 @@
     %p
       By using the eHouseOffers.com web site (COLLECTIVELY REFERRED TO AS “WEB SITE” OR “SERVICE”), YOU ARE AGREEING TO ABIDE BY all terms, conditions, and notices contained herein. If you do not wish to be bound to this web sites terms, conditions, and notices, please do not use this web site.
 
-    %ol#tos
+    %ol#tos_list
       %li
         %h3 Personal Information
         %p The personal information we collect allows us to provide the services we offer. It also enables us to contact you when needed, and improve your experience on the web site. We will typically ask you to provide information such as name, email address, postal address, telephone number, and information about your home on the web site to receive services from eHouseOffers.com, regional investors, and real estate professionals. By submitting this personally identifiable information to eHouseOffers.com you agree to receive email and postal mail from eHouseOffers.com, real estate service providers, and other third party marketers. You further understand and agree that by using our services, you are extending an express invitation for eHouseOffers.com, real estate service providers, and other third party marketers to contact you by telephone at the numbers you have provided, and you hereby consent to receiving calls even if your phone number is on any federal, state or other “Do Not Call” lists.
