--- a/public/stylesheets/sass/tos.scss
+++ b/public/stylesheets/sass/tos.scss
@@ -1,29 +1,29 @@
-#tosC {}
+#tos {}
 
-#tosC p {
+#tos p {
     color : #666;
     line-height : 1.6em;
 }
-ol#tos {
+ol#tos_list {
     color : #75973e;
 }
-ol#tos li {
+ol#tos_list li {
     list-style : decimal inside none;
     margin : 1em 0;
 }
-ol#tos h3 {
+ol#tos_list h3 {
     color : #75973e;
     display : inline;
     margin : 1em 0 .5em 0;
 }
 
-ol#tos ol {
+ol#tos_list ol {
     margin-left : 50px;
 }
-ol#tos ol li {
+ol#tos_list ol li {
     list-style : lower-alpha outside none;
     margin : 0;
 }
-ol#tos ol li p {
+ol#tos_list ol li p {
     color : #666;
 }
